--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container-fluid">
         <div class="bg ">
-            <h1 class="text-center">DIGITAL HEALTHCARE SOLUTION.</h1>
+            <h1 class="text-center mt-5">DIGITAL HEALTHCARE SOLUTION.</h1>
             <br><br>
             <h1 class="text-center">Go Paperless,Access <br>Your Data Anywhere,Anytime!</h1>
             <button class="btn btn-outline-success text-center">GET STARTED</button>
