it will change the structure of the application

--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
 
 <body>
     <div class="container-fluid">
-        <div class="toppage ">
-            <nav>
-                <ul>
-                    <li><a href="logo.asp">logo</a></li>
-                    <li><a href="home.asp">Home</a></li>
-                    <li><a href="login.asp">Login</a></li>
-                </ul>
-            </nav>
+        <div class="navbar">
+            <a class="active" href="#"><i class="fa fa-fw fa-home"></i> logo</a>
+            <a href="#"><i class="fa fa-fw fa-home"></i> home</a>
+            <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
         </div>
-    </div>
+
 </body>
 
 </html>
