add an h6 element

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
     <div class="container-fluid">
         <div class="bg ">
-            <h1 class="text-center mt-5">DIGITAL HEALTHCARE SOLUTION.</h1>
+            <h1 class="text-center mt-5    ">DIGITAL HEALTHCARE SOLUTION.</h1>
             <br><br>
             <h1 class="text-center">Go Paperless,Access <br>Your Data Anywhere,Anytime!</h1>
             <button class="btn btn-outline-success text-center">GET STARTED</button>
         </div>
+        <h6 class="text-center"><em>By clicking the button,you accept our terms and conditions</em></h6>
     </div>
 
 
