add social icons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/index.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -21,8 +22,16 @@
         </div>
         <h6 class="text-center"><em>By clicking the button,you accept our terms and conditions</em></h6>
     </div>
+    <div class="container mt-5">
+        <ul class="social-icons  text-center list-unstyled list-inline">
+            <li class="list-inline-item"><a href="http://www.facebook.com"><img src='./social_icons/facebook.png' /></a></li>
+            <li class="list-inline-item"><a href="http://www.twitter.com"><img src='./social_icons/twitter.png' /></a></li>
+            <li class="list-inline-item"><a href="http://www.youtube.com"><img src='./social_icons/you_tube.png' /></a></li>
+        </ul>
+        
+    </div>
 
-
+ 
 
 </body>
 
