--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Dosage forms</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
@@ -14,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <div class="navbar">
-            <a class="active" href="#"><i class="fa fa-fw fa-home"></i> logo</a>
+            <a class="active" href="#"><i class="fa fa-fw fa-home"></i> logo.</a>
             <a href="#"><i class="fa fa-fw fa-home"></i> home</a>
             <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
         </div>
