it will change the structure of the application

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <div class="navbar">
-            <a class="active" href="#"><i class="fa fa-fw fa-home"></i> logo.</a>
+            <a class="active" href="#"><i class="fa fa-fw fa-home"></i> logo</a>
             <a href="#"><i class="fa fa-fw fa-home"></i> home</a>
             <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
         </div>
