added s to solution

--- a/index.html
+++ b/index.html
@@ -22,6 +22,28 @@
 </head>
 
 <body>
+    <div class="container-fluid">
+        <div class="bg ">
+            <h1 class="text-center mt-5">DIGITAL HEALTHCARE SOLUTIONS.</h1>
+            <br><br>
+            <h1 class="text-center">Go Paperless,Access <br>Your Data Anywhere,Anytime!</h1>
+            <button class="btn btn-outline-success text-center">GET STARTED</button>
+        </div>
+        <h6 class="text-center"><em>By clicking the button,you accept our terms and conditions</em></h6>
+    </div>
+    <div class="container mt-5">
+        <ul class="social-icons  text-center list-unstyled list-inline">
+            <li class="list-inline-item"><a href="http://www.facebook.com"><img src='./social_icons/facebook.png' /></a>
+            </li>
+            <li class="list-inline-item"><a href="http://www.twitter.com"><img src='./social_icons/twitter.png' /></a>
+            </li>
+            <li class="list-inline-item"><a href="http://www.youtube.com"><img src='./social_icons/you_tube.png' /></a>
+            </li>
+        </ul>
+
+    </div>
+
+
     <header>
         <div class="view" style="background-color:#59c3c3; background-position: center center;">
             <div class="mask rgba-gradient align-items-center">
