--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a class="active" href="#"><i class="fa fa-fw fa-home"></i> logo</a>
             <a href="#"><i class="fa fa-fw fa-home"></i> home</a>
             <a href="#"><i class="fa fa-fw fa-user"></i> Login.</a>
+            <a href="#"><i class="fa fa-fw fa-about">about</i></a>
         </div>
 
 </body>
