--- a/index.html
+++ b/index.html
@@ -14,12 +14,31 @@
 
 <body>
     <div class="container-fluid">
-        <div class="navbar">
-            <a class="active" href="#"><i class="fa fa-fw fa-home"></i> logo</a>
-            <a href="#"><i class="fa fa-fw fa-home"></i> home</a>
-            <a href="#"><i class="fa fa-fw fa-user"></i> Login.</a>
-            <a href="#"><i class="fa fa-fw fa-about">about</i></a>
-        </div>
+        <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
+            <div class="container">
+                <a href="#" class="navbar-brand">
+                    <!-- Logo Image -->
+                    <img src="https://res.cloudinary.com/mhmd/image/upload/v1557368579/logo_iqjuay.png" width="45"
+                        alt="" class="d-inline-block align-middle mr-2">
+                    <!-- Logo Text -->
+                    <span class="text-uppercase font-weight-bold">Company</span>
+                </a>
+
+                <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                    class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
+
+                <div id="navbarSupportedContent" class="collapse navbar-collapse">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active"><a href="#" class="nav-link">Home <span
+                                    class="sr-only">(current)</span></a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">login</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
 </body>
 
