--- a/index.html
+++ b/index.html
@@ -47,6 +47,35 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
         </script>
+        <div>
+            <div class="simple-login-container">
+                <h2>Input Form</h2>
+                <div class="row">
+                    <div class="col-md-12 form-group">
+                        <input type="text" class="form-control" placeholder="Name of medicine">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 form-group">
+                        <input type="No. of days" placeholder="No. of days" class="form-control" min="1" max=10>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 form-group">
+                        <input type="Amount of pills" class="form-control" placeholder="Amount of pills" >
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 form-group">
+                        <input type="How many times you should take pills" class="form-control" placeholder="How many times you should take pills" >
+                    </div>
+                    <div class="col-md-12 form-group">
+                        <input type="submit" class="btn btn-block btn-login" placeholder="Enter your Password" >
+                    </div>
+            </div>
+
+                
+        </div>
 </body>
 
 </html>
