--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
+        <nav class="navbar navbar-expand-lg py-3 navbar-info bg-info shadow-sm">
             <div class="container">
                 <a href="#" class="navbar-brand">
                     <!-- Logo Image -->
@@ -48,7 +48,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
         </script>
         <div>
-            <div class="simple-login-container">
+            <div class="simple-login-container" id="main-page">
                 <h2>Input Form</h2>
                 <div class="row">
                     <div class="col-md-12 form-group">
